--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,86 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app-cont {
+    /* background: red; */
+    padding: .5rem;
+    width: 50%;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-screen {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.1);
+    margin-bottom: .4rem;
+    border-radius: .5rem;
+    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 10px;
+    padding: .6rem;
+    position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.blank-chat-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    user-select: none;
 }
 
-.card {
-  padding: 2em;
+.message{
+    padding: .4rem .6rem;
+    display: flex;
+    align-items: flex-end;
+    gap: 1rem;
+    max-width: 80%;
 }
 
-.read-the-docs {
-  color: #888;
+.message .timeStamp{
+    font-size: 10px;
+    float: right;
+    margin-top: 5px;
+    white-space: nowrap;
+}
+
+.user{
+    background-color: rgb(101, 178, 255);
+    border-radius: .5rem .5rem 0 .5rem;
+    margin-left: auto;
+}
+.bot{
+    background-color: rgb(255, 255, 255);
+    border-radius: .5rem .5rem .5rem 0;
+}
+
+.msg-sender {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    width: 100%;
+}
+
+.msg-sender input {
+    padding: 1rem;
+    font-size: 1rem;
+    border-radius: .5rem;
+    outline: none;
+    background: #efeeee;
+    width: 100%;
+    border: 1px solid;
+}
+
+.msg-sender button {
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    border: 1px solid;
+    border-radius: .5rem;
+    cursor: pointer;
+    background: lightblue;
 }
