--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
 .app-cont {
     /* background: red; */
     padding: .5rem;
-    width: 50%;
-    height: 70vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -44,7 +44,6 @@
 
 .message .timeStamp{
     font-size: 10px;
-    float: right;
     margin-top: 5px;
     white-space: nowrap;
 }
